[gd_scene load_steps=4 format=3 uid="uid://dmugne84f65ww"]

[ext_resource type="Script" path="res://Menus/pause_menu.gd" id="1_fogpv"]
[ext_resource type="Theme" uid="uid://b458yhf7afqoh" path="res://Menus/menus.tres" id="1_vi2ad"]
[ext_resource type="PackedScene" uid="uid://bcl4f0yn5lsj0" path="res://Menus/settings_menu.tscn" id="3_imv4m"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vi2ad")
script = ExtResource("1_fogpv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25098, 0.25098, 0.25098, 0.705882)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Paused"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Resume Game"

[node name="SettingsButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Settings
"

[node name="QuitButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Quit
"

[node name="SettingsMenu" parent="." instance=ExtResource("3_imv4m")]
visible = false

[connection signal="pressed" from="GridContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="GridContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="GridContainer/QuitButton" to="." method="_on_quit_button_pressed"]
